--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>X și 0</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div class="container">
-    <h1>X și 0</h1>
+    <h1>Tic Tac Toe</h1>
     <div class="board">
         <div class="square"></div>
         <div class="square"></div>
